syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/light-mq/proto";
option java_package = "org.lightmq.light-mq.publisher";

package lmq;

service Publisher {
  // todo client streaming
  rpc Send (SendRequest) returns (google.protobuf.Empty) {}
}

message SendRequest {
  string topic = 1;
  bytes message = 2;
}
